Mobile Nav Overflow Fix

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,7 @@ body
     }
     body {
         font-size: 10px;
+        overflow: visible;
     }
    .topbar{
     display: none !important;
